* Jan 3 2001 hship

Rename InternalAsset to ContextAsset, and <internal-asset> to <context-asset>.
Implement localization for ContextAsset and PrivateAsset.
Have the PageSource cache instance of ExternalAsset, PrivateAsset and ContextAsset.
check in some missing files from the Savage Refactoring (woops!).
[112110] Tracking bug: Finish Localization Support 

* Jan 2 2001 hship

Split the index for Tapestry.
Add setLocale() to IEngine.
Implement HTML template localization.
Make a couple of protected variables private in BasePage.

* Dec 29 2000 hship

Savage Refactoring!
IApplication -> IEngine, com.primix.tapestry.app -> com.primix.tapestry.engine
Fix many out of date Javadoc comments.
Improve exception handling/reporting in ApplicationServlet.
Add the engineClassName property to the ApplicationSpecification, update the DTD and
the SpecificationParser.
Have the ApplicationServlet construct the engine from the class name.

* Dec 28 2000 hship

Woops!  Moved the logic for creating the visit object to AbstractApplication.

* Dec 28 2000 hship

Change SimpleApplication to create the visit object based on a class specified in the application specification.

* Dec 28 2000 hship

Restructure RadioGroup and Radio slightly, to make them work (combined) more like a 
PropertySelection.
No longer use j2ee.jar, use a combination of javax.servlet.jar from Jetty's distribution,
and lib/ext/ejb.jar from the jBoss distribution.

* Dec 27 2000 hship

Change IBinding.getBoolean() to sniff for array types and return true if the length
is non-zero.

* Dec 26 2000 hship

Create a re-usable threadsafe Pool component and use it, instead of ad-hoc code,
to handle pooled Pages.

* Dec 21 2000 hship

Create a special case in PageRecorder for converting EJB references to handles for
storage and vice-versa when the page is restored.
Fix a previously unnoticed problem caused by bad timing in the interaction between
committing page changes and lazy creation of persistent page properties.